finished bar Graph
finished the bar graph and added better exception handeling to data manager and improved docstrings/added some more. also added template for further design for graph manager class. added depreciated Natty functions